# acc-experiments-tmlr2024

./: .gitignore  README.md  basic_environment_cpu.yml  basic_environment_cu118.yml  compute_network_statistics.py  index_and_download_datasets.py  pyproject.toml  required_packages.txt  setup.py
data/: data_stats.json
data/incloud/arxiv_year/: metadata.yml
data/incloud/chameleon/: metadata.yml
data/incloud/roman_empire/: metadata.yml
experiments/: clustering_rank_deficiency_noise_demo.py  common.py  embedding_info_analysis.py  graph_alignment.py  graph_alignment_baselines.py  graph_alignment_per_node_analysis.py  magna_graph_alignment.py  magna_network_alignment.py  network_alignment.py  node_classification.py  squirrel_analysis.py
methods/acc_and_pcapass/: config.yml  run_acc.py  run_accgnn.py  run_pcapass.py
methods/baselines/: config.yml  env_name.yml  run_bgrl.py  run_ccassg.py  run_dgi.py  run_gae.py  run_graphmae.py  run_graphmae2.py  run_greet.py  run_mvgrl.py  run_sgcn.py  run_spgcl.py
run_scripts/: acc_steps_and_max_dim.sh  clustering_and_rank_deficiency_demo.sh  graph_alignment_acc_vs_pcapass.sh  graph_alignment_acc_vs_pcapass_gnn.sh  graph_alignment_analysis.sh  node_classification.sh  node_classification_acc_pcapass_gnn.sh  singular_value_spectra.sh  singular_value_spectra_gnn_versions.sh  singular_value_spectrums.sh  squirrel_analysis.sh
src/accnebtools/: argsfromconfig.py  utils.py
structfeatures/: LICENSE  pyproject.toml  setup.py
structfeatures/src/structfeatures/: __init__.py  core.py  core_f32.py  core_f64.py  features.py  main.py
(+80 files in other folders)
